err/asyncplot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asyncplot'...
Compiling './lib/python3.5/site-packages/asyncplot/client.py'...
***   File "./lib/python3.5/site-packages/asyncplot/client.py", line 87
    print "Queue put..."
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/asyncplot/example1.py'...
***   File "./lib/python3.5/site-packages/asyncplot/example1.py", line 19
    print y
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/asyncplot/server.py'...
***   File "./lib/python3.5/site-packages/asyncplot/server.py", line 145
    print n, time.time() - tic
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/asyncplot/thread.py'...
***   File "./lib/python3.5/site-packages/asyncplot/thread.py", line 32
    print "Initializing thread"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/asyncplot/threading_server.py'...
***   File "./lib/python3.5/site-packages/asyncplot/threading_server.py", line 30
    print "Server listening on port %i" % (port, )
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/asyncplot-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
